[build-system]
requires = ["setuptools>=45.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enertech"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "psycopg2-binary>=2.9.0",
]

[tool.setuptools]
packages = { find = { where = ["enertech"] } }
package-dir = { "" = "enertech" }