[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "enertech"
version = "0.1.0"
dependencies = [
    "psycopg2-binary"
]
requires-python = ">= 3.8"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"

[tool.setuptools]
packages = { find = { where = ["enertech"] } }
package-dir = { "" = "enertech" }